[FIX] web_editor: fix invisible background position actions in grid mode
Steps to reproduce:

- Go to website (“Edit” mode) > Add a “Big Boxes” block.
- Switch to “Grid” mode > Select the last column n (while n > 1) and set
a background image on it.
- Try to change the background position > You cannot save or cancel the
changes since the option buttons (“Apply” & “Discard”) are invisible.

This is simply because the grid element was cloned on the background
container (`.o_overlay_background`) with its grid `z-index` style
(with `z-index` === n) which automatically hides the buttons.

The goal of this commit is to fix this behaviour by simply forcing the
`z-index` of the background element to 0.

task-3648466

X-original-commit: 7dbb25dfeae25f27e10d4052db98c5f9d93699ff

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -2389,6 +2389,7 @@
                 transform: none !important;
                 max-width: unset !important;
                 max-height: unset !important;
+                z-index: 0 !important;
             }
         }
     }
